# hyprscroller

./: .gitignore  CMakeLists.txt  README.md
src/: dispatchers.cpp  dispatchers.h  list.h  main.cpp  scroller.cpp  scroller.h
src/core/: core.cpp  core.h
src/layout/: row.cpp  row.h  row_actions.cpp  row_geometry.cpp  scroller_layout.cpp  scroller_layout.h  scroller_layout_commands.cpp  scroller_layout_focus.cpp  scroller_layout_internal.h  scroller_layout_workspace.cpp
src/layout/canvas/: commands.cpp  core.cpp  focus.cpp  internal.h  layout.h  workspace.cpp
src/layout/lane/: actions.cpp  core.cpp  geometry.cpp  lane.h
src/layout/row/: row.h
src/layout/scroller/: commands.cpp  core.cpp  focus.cpp  internal.h  layout.h  workspace.cpp
src/model/: model.cpp  model.h  model_column.cpp  stack.cpp  stack.h  window.cpp
